<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="match_parent"
                android:layout_height="36sp"
                android:minHeight="0sp"
                android:onClick="goBack"
                android:padding="4sp"
                android:text="@string/back"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/about_desc_1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:text="@string/about_desc_2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:text="@string/about_desc_3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:text="@string/about_desc_4"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:text="@string/about_desc_5"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>