<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C8F17A"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/title_new_marker"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/new_marker_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/new_marker_snippet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:ems="10"
        android:hint="@string/snippet"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_weight="1"
            android:text="@string/latitiude"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/new_marker_lat"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:text="@string/longitude"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/new_marker_lng"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_marker_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="50sp"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/new_marker_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="50sp"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>