<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainMapLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:minHeight="0sp"
        android:onClick="goToAboutPage"
        android:padding="4sp"
        android:text="@string/about"
        android:textSize="18sp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".MapsActivity"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTintMode="multiply"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locations_been_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actualLocationList"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginLeft="4sp"
                android:layout_marginRight="4sp"
                android:layout_weight="1"
                android:background="#E3FCBE" />

            <Button
                android:id="@+id/new_current_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/locations_been_save"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locations_want_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wantedLocationList"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginLeft="4sp"
                android:layout_marginRight="4sp"
                android:layout_weight="1"
                android:background="#CFECFA" />

            <Button
                android:id="@+id/new_custom_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:backgroundTintMode="multiply"
                android:text="@string/locations_want_save"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
